--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -96,10 +96,10 @@
       };
       // --------------------- END OF STEP 2
 
-       /* -- STEP 3
+        //-- STEP 3
        const getEvents = document.getElementById("getEvents");
       const events = document.getElementById("events");
-      const getCalendarEvents = "https://d4zjevjv39.execute-api.eu-central-1.amazonaws.com/dev/api/get-events";
+      const getCalendarEvents = "https://9cn11x13jc.execute-api.eu-central-1.amazonaws.com/dev/api/get-events";
 
       getEvents.onclick = function () {
         const { access_token } = JSON.parse(accessTokenElement.innerText);
@@ -112,7 +112,7 @@
             events.innerText = JSON.stringify(json, null, 2);
           });
       };
-       -- END OF STEP 3 */
+       //-- END OF STEP 3 
 
     </script>
   </body>
